@@ -32,7 +32,7 @@ __thiscall bool ANM2::IsPlaying(std_string* name);
 __thiscall int ANM2::GetFrame();
 
 "558bec518b45??568bf18378??1072??8b006a0150e8????????84c074??8b46":
-__thiscall int ANM2::SetFrame(const char* anim,float frame);
+__thiscall int ANM2::SetFrame(std_string* anim,float frame);
 
 "558bec5153568bf157837e??0074":
 __thiscall void ANM2::Load(std_string &ANM2Path, bool loadgraphics);
